--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
+# --- Secrets & env files ---
 .env
 .env.*
+!.env.example
+!.env.sample
+!.env.template
+!.env.local.example
+
+# dotenv-vault local files
+.env.vault
+.env.keys
+
+# Node / build
 node_modules/
 dist/
-build/
+.build/
 .cache/
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-coverage/
-artifacts/
+.next/
+out/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# secrets
+.env
+.env.*
+\!.env.example
+
+# allow safe template
+!.env.template
