--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,2 @@
-VITE_PUBLIC_CHAIN_ID=
-VITE_PUBLIC_RPC_URL=
-VITE_PUBLIC_ENABLE_RETRO_THEME=
+VITE_RELAYER_URL=http://localhost:8080/api
+VITE_DEFAULT_CHAIN_ID=11155111
