--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-VITE_RELAYER_URL=http://localhost:8080/api
-VITE_DEFAULT_CHAIN_ID=11155111
+VITE_RELAYER_URL=http://127.0.0.1:8080/api
+VITE_VOID_ADDRESS=0xYOUR_VOID_TOKEN_ADDRESS_ON_SEPOLIA
