--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
+# local env
+.env
+.env.*.local
+
+# build
 node_modules/
 dist/
-build/
-.cache/
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-coverage/
-artifacts/
 
-# secrets
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# misc
+.DS_Store
+# env
 .env
 .env.*
 !.env.template
-obelisk-wallet/
-obelisk-wallet/
