--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "tailwindcss": "^3.4.7",
     "vite": "^5.4.0"
   },
-  "license": "VOID Community License (VCL) v1.0"
+  "license": "SEE LICENSE IN LICENSE"
 }
