--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,6 @@
 VITE_RELAYER_URL=http://127.0.0.1:8080/api
 VITE_VOID_ADDRESS=0xYOUR_VOID_TOKEN_ADDRESS_ON_SEPOLIA
+
+VITE_DATAREGISTRY_ADDR=
+VITE_WALLETORACLE_ADDR=
+VITE_IPFS_ENDPOINT=
